Fix sponsor overflow

--- a/current/src/style.css
+++ b/current/src/style.css
@@ -1235,6 +1235,7 @@ nav {
   justify-content: space-around;
   margin-top: 50px;
   margin-bottom: 100px;
+  max-width: 100vw;
 }
 
 #sponsors-flex h2 {
